tests/snapshots/examples_guide/prefix.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/prefix.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
