tests/snapshots/examples_guide/print.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/print.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
