tests/snapshots/examples_guide/rebinding_with_let.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/rebinding_with_let.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
