tests/snapshots/examples_guide/record_patterns.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/record_patterns.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
