tests/snapshots/examples_guide/record_punning.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/record_punning.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
