tests/snapshots/examples_guide/records.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/records.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
