tests/snapshots/examples_guide/safe_arithmetic.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/safe_arithmetic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
