tests/snapshots/examples_guide/semicolons.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/semicolons.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
