tests/snapshots/examples_guide/shapes_records.snap
---
source: tests/examples/examples_advanced_snapshots.rs
---
Fixture: examples/guide/shapes_records.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
