tests/snapshots/examples_guide/simple_option.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/simple_option.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
