tests/snapshots/examples_guide/sort_by_string_len.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/sort_by_string_len.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
